fix dark mode

--- a/components/fee-button.module.css
+++ b/components/fee-button.module.css
@@ -9,7 +9,7 @@
 .receipt td {
     padding: .25rem .1rem;
     background-color: var(--theme-inputBg);
-    color: var(--theme-color);
+    color: var(--bs-body-color);
 }
 
 .receipt tfoot {
